// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PasswordForm /> Should render and match the snapshot 1`] = `
.c0 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  height: 100%;
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 999;
  background-color: rgba(0,0,0,0.4);
  border-radius: 0px;
  border-radius: 0px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  left: 0px;
  top: 0px;
}

.c1 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  max-width: 700px;
  max-height: 90%;
  min-width: 450px;
  min-height: 200px;
  overflow: auto;
  padding-top: 20px;
  padding-bottom: 20px;
  padding-right: 20px;
  padding-left: 20px;
  background-color: rgba(255,255,255,1);
}

.c7 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  margin-top: 10px;
  border-radius: 0px;
  border-radius: 0px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-bottom: 20px;
}

.c5 {
  margin: 0;
  font-family: DM Sans;
  font-size: 25px;
  line-height: 130%;
  color: #2F3850;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  justify-items: space-between;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c6 {
  height: 28px;
  width: 28px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  background: #E9F1FB;
  margin-right: 35px;
  cursor: pointer;
  border: none;
  outline: none;
  padding: 0;
  position: relative;
  left: 40px;
  top: -8px;
}

.c9 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  margin-bottom: 5px;
  color: #2F3850;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c12 {
  width: 100%;
  height: 40px;
  border-radius: 100px;
  cursor: pointer;
  border: none;
  outline: none;
  background-color: #107969;
  color: #FFFFFF;
  border: 1px solid transparent;
  cursor: default;
  background-color: #9AA1B6;
  -webkit-transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  margin-top: 25px;
  margin-bottom: 25px;
  border-radius: 5px;
  height: 46px;
}

.c11 {
  padding: 12px;
  border-style: solid;
  border-width: 1px;
  border-color: #E9F1FB;
  border-radius: 5px;
  width: 100%;
  height: 46px;
  color: #2F3850;
}

.c11:focus {
  box-shadow: none;
  outline: none;
  border-color: #107969;
}

.c11:disabled {
  color: #ABBBD1;
}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:960px) {

}

@media only screen and (min-width:1170px) {

}

@media only screen and (min-width:1360px) {

}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:960px) {

}

@media only screen and (min-width:1170px) {

}

@media only screen and (min-width:1360px) {

}

@media only screen and (max-width:480px) {
  .c2 {
    max-height: calc(100% - 20px);
    max-width: none;
    min-width: 0;
    width: calc(100% - 20px);
  }
}

<div>
  <div
    class="c0"
    display="flex"
    height="100%"
    width="100%"
  >
    <div
      class="c1 c2"
      overflow="auto"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <h1
            class="c5"
          >
            Reset your password
          </h1>
          <button
            class="c6"
            data-cy="modal-close-button"
            data-testid="close-modal-button"
          >
            <img
              alt="cross"
              src="IMAGE_MOCK"
            />
          </button>
        </div>
      </div>
      <div
        class="c7"
      >
        <div
          class="c8"
        >
          <p
            class="c9"
            width="fit-content"
          >
            Old password
          </p>
          <div
            class="c10"
            width="100%"
          >
            <input
              class="c11"
              height="46"
              name="oldPassword"
              placeholder="Your old password"
              type="password"
              value=""
              width="100%"
            />
          </div>
        </div>
        <div
          class="c8"
        >
          <p
            class="c9"
            width="fit-content"
          >
            New password
          </p>
          <div
            class="c10"
            width="100%"
          >
            <input
              class="c11"
              height="46"
              name="newPassword"
              placeholder="Your new password"
              type="password"
              value=""
              width="100%"
            />
          </div>
        </div>
        <div
          class="c8"
        >
          <p
            class="c9"
            width="fit-content"
          >
            Confirmation
          </p>
          <div
            class="c10"
            width="100%"
          >
            <input
              class="c11"
              height="46"
              name="newPasswordConfirmation"
              placeholder="Confirm your new password"
              type="password"
              value=""
              width="100%"
            />
          </div>
        </div>
        <button
          class="c12"
          color="primary"
          data-testid="submit-button"
          disabled=""
          height="46"
          radius="100px"
          type="submit"
        >
          Reset password
        </button>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`<PasswordForm /> Should render error and match the snapshot 1`] = `
.c0 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  height: 100%;
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 999;
  background-color: rgba(0,0,0,0.4);
  border-radius: 0px;
  border-radius: 0px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  left: 0px;
  top: 0px;
}

.c1 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  max-width: 700px;
  max-height: 90%;
  min-width: 450px;
  min-height: 200px;
  overflow: auto;
  padding-top: 20px;
  padding-bottom: 20px;
  padding-right: 20px;
  padding-left: 20px;
  background-color: rgba(255,255,255,1);
}

.c7 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  margin-top: 10px;
  border-radius: 0px;
  border-radius: 0px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-bottom: 20px;
}

.c5 {
  margin: 0;
  font-family: DM Sans;
  font-size: 25px;
  line-height: 130%;
  color: #2F3850;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  justify-items: space-between;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c6 {
  height: 28px;
  width: 28px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  background: #E9F1FB;
  margin-right: 35px;
  cursor: pointer;
  border: none;
  outline: none;
  padding: 0;
  position: relative;
  left: 40px;
  top: -8px;
}

.c14 {
  width: auto;
  height: auto;
  margin-right: 15px;
}

.c9 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  margin-bottom: 5px;
  color: #2F3850;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c15 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  font-size: 15px;
  font-weight: 700;
  color: #2F3850;
}

.c13 {
  padding: 20px;
  width: 100%;
  max-width: 700px;
  background-color: rgba(239,70,47,0.3);
  border: 1px solid #EF462F;
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  width: 100%;
  height: 40px;
  border-radius: 100px;
  cursor: pointer;
  border: none;
  outline: none;
  background-color: #107969;
  color: #FFFFFF;
  border: 1px solid transparent;
  cursor: default;
  background-color: #9AA1B6;
  -webkit-transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  margin-top: 25px;
  margin-bottom: 25px;
  border-radius: 5px;
  height: 46px;
}

.c11 {
  padding: 12px;
  border-style: solid;
  border-width: 1px;
  border-color: #E9F1FB;
  border-radius: 5px;
  width: 100%;
  height: 46px;
  color: #2F3850;
}

.c11:focus {
  box-shadow: none;
  outline: none;
  border-color: #107969;
}

.c11:disabled {
  color: #ABBBD1;
}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:960px) {

}

@media only screen and (min-width:1170px) {

}

@media only screen and (min-width:1360px) {

}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:960px) {

}

@media only screen and (min-width:1170px) {

}

@media only screen and (min-width:1360px) {

}

@media only screen and (max-width:480px) {
  .c2 {
    max-height: calc(100% - 20px);
    max-width: none;
    min-width: 0;
    width: calc(100% - 20px);
  }
}

<div>
  <div
    class="c0"
    display="flex"
    height="100%"
    width="100%"
  >
    <div
      class="c1 c2"
      overflow="auto"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <h1
            class="c5"
          >
            Reset your password
          </h1>
          <button
            class="c6"
            data-cy="modal-close-button"
            data-testid="close-modal-button"
          >
            <img
              alt="cross"
              src="IMAGE_MOCK"
            />
          </button>
        </div>
      </div>
      <div
        class="c7"
      >
        <div
          class="c8"
        >
          <p
            class="c9"
            width="fit-content"
          >
            Old password
          </p>
          <div
            class="c10"
            width="100%"
          >
            <input
              class="c11"
              height="46"
              name="oldPassword"
              placeholder="Your old password"
              type="password"
              value=""
              width="100%"
            />
          </div>
        </div>
        <div
          class="c8"
        >
          <p
            class="c9"
            width="fit-content"
          >
            New password
          </p>
          <div
            class="c10"
            width="100%"
          >
            <input
              class="c11"
              height="46"
              name="newPassword"
              placeholder="Your new password"
              type="password"
              value=""
              width="100%"
            />
          </div>
        </div>
        <div
          class="c8"
        >
          <p
            class="c9"
            width="fit-content"
          >
            Confirmation
          </p>
          <div
            class="c10"
            width="100%"
          >
            <input
              class="c11"
              height="46"
              name="newPasswordConfirmation"
              placeholder="Confirm your new password"
              type="password"
              value=""
              width="100%"
            />
          </div>
        </div>
        <button
          class="c12"
          color="primary"
          data-testid="submit-button"
          disabled=""
          height="46"
          radius="100px"
          type="submit"
        >
          Reset password
        </button>
        <div
          class="c13"
        >
          <img
            alt="error"
            class="c14"
            src="IMAGE_MOCK"
          />
          <p
            class="c15"
            font-size="15"
            font-weight="bold"
          >
            Test error
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
